Implement migration from /legal/ to /trust/ structure for compliance and clarity
- Updated middleware to handle redirects from old /legal/ URLs to new /trust/ URLs, ensuring SEO integrity.
- Revised sitemap generation to include new trust center document routes, enhancing user navigation.
- Adjusted links in various components and documentation to reflect the new /trust/ architecture, improving accessibility and consistency.
- Removed outdated DPA content and updated references across multiple languages to align with the new structure.
- Enhanced documentation to guide users on the URL structure migration, ensuring clarity in legal and compliance resources.

--- a/content/expert-agreement/en.mdx
+++ b/content/expert-agreement/en.mdx
@@ -21,7 +21,7 @@ Welcome to Eleva.care. This agreement explains, in plain language, how we work t
 - For clinical notes/files you create, you are the Data Controller; Eleva.care is your Data Processor
 - We store data securely and act only on your documented instructions; we provide encryption, access controls, audit, and breach notice
 - You handle patient notices/consents, data subject requests, and retention rules for medical records
-- See our [Data Processing Agreement](/legal/dpa) and [Security](/legal/security) pages for subprocessors and safeguards
+- See our [Data Processing Agreement](/trust/dpa) and [Security](/trust/security) pages for subprocessors and safeguards
 
 ## 4) Platform services (what we provide)
 
