--- a/content/privacy/br.mdx
+++ b/content/privacy/br.mdx
@@ -49,7 +49,7 @@ Bases legais: execução de contrato, interesses legítimos (segurança, melhori
 - Quando exigido por lei ou para proteger direitos e segurança
 - Em transação societária, com aviso
 
-Veja nosso [Acordo de Processamento de Dados](/pt-BR/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
+Veja nosso [Acordo de Processamento de Dados](/pt-BR/trust/dpa) para a lista atual de subprocessadores e salvaguardas.
 
 ## 5) Retenção (prazos)
 
@@ -69,7 +69,7 @@ Como exercer: `privacy@eleva.care` ou `dpo@eleva.care`. Respondemos em 1 mês (G
 
 ## 7) Segurança
 
-Criptografia em trânsito e repouso, menor privilégio, auditoria e monitoramento contínuo. Nenhum sistema é 100% seguro, mas trabalhamos para proteger seus dados. Veja nossa página de [Segurança](/pt-BR/legal/security).
+Criptografia em trânsito e repouso, menor privilégio, auditoria e monitoramento contínuo. Nenhum sistema é 100% seguro, mas trabalhamos para proteger seus dados. Veja nossa página de [Segurança](/pt-BR/trust/security).
 
 ## 8) Transferências internacionais
 
