--- a/content/privacy/en.mdx
+++ b/content/privacy/en.mdx
@@ -49,7 +49,7 @@ Legal bases include contract performance, legitimate interests (security, produc
 - If required by law or to protect rights and safety
 - As part of a corporate transaction, with notice
 
-See our [Data Processing Agreement](/legal/dpa) for the current subprocessor list and safeguards.
+See our [Data Processing Agreement](/trust/dpa) for the current subprocessor list and safeguards.
 
 ## 5) Retention (how long we keep data)
 
@@ -69,7 +69,7 @@ How to exercise your rights: email `privacy@eleva.care` or `dpo@eleva.care`. We 
 
 ## 7) Security
 
-We protect data with encryption in transit and at rest, least‑privilege access, auditing, and continuous monitoring. No system is 100% secure, but we work hard to keep your data safe. See our [Security](/legal/security) page for details.
+We protect data with encryption in transit and at rest, least‑privilege access, auditing, and continuous monitoring. No system is 100% secure, but we work hard to keep your data safe. See our [Security](/trust/security) page for details.
 
 ## 8) International transfers
 
