--- a/content/privacy/es.mdx
+++ b/content/privacy/es.mdx
@@ -49,7 +49,7 @@ Bases legales: ejecución de contrato, intereses legítimos (seguridad, mejora),
 - Si la ley lo requiere o para proteger derechos y seguridad
 - En una transacción corporativa, con aviso previo
 
-Vea nuestro [Acuerdo de Procesamiento de Datos](/es/legal/dpa) para la lista de subencargados y salvaguardas.
+Vea nuestro [Acuerdo de Procesamiento de Datos](/es/trust/dpa) para la lista de subencargados y salvaguardas.
 
 ## 5) Conservación (tiempos)
 
@@ -69,7 +69,7 @@ Cómo ejercerlos: `privacy@eleva.care` o `dpo@eleva.care`. Respondemos en 1 mes 
 
 ## 7) Seguridad
 
-Ciframos en tránsito y en reposo, aplicamos mínimo privilegio, auditoría y monitorización continua. Ningún sistema es 100% seguro, pero trabajamos para proteger sus datos. Vea nuestra página de [Seguridad](/es/legal/security).
+Ciframos en tránsito y en reposo, aplicamos mínimo privilegio, auditoría y monitorización continua. Ningún sistema es 100% seguro, pero trabajamos para proteger sus datos. Vea nuestra página de [Seguridad](/es/trust/security).
 
 ## 8) Transferencias internacionales
 
