--- a/content/privacy/pt.mdx
+++ b/content/privacy/pt.mdx
@@ -49,7 +49,7 @@ Bases legais: execução de contrato, interesses legítimos (segurança, melhori
 - Se exigido por lei ou para proteger direitos e segurança
 - Numa transação societária, com aviso
 
-Veja o nosso [Acordo de Processamento de Dados](/pt/legal/dpa) para a lista atual de subprocessadores e salvaguardas.
+Veja o nosso [Acordo de Processamento de Dados](/pt/trust/dpa) para a lista atual de subprocessadores e salvaguardas.
 
 ## 5) Conservação (prazos)
 
@@ -69,7 +69,7 @@ Como exercer: `privacy@eleva.care` ou `dpo@eleva.care`. Respondemos em 1 mês (R
 
 ## 7) Segurança
 
-Ciframos em trânsito e em repouso, aplicamos menor privilégio, auditoria e monitorização contínua. Nenhum sistema é 100% seguro, mas trabalhamos para proteger os seus dados. Veja a página de [Segurança](/pt/legal/security).
+Ciframos em trânsito e em repouso, aplicamos menor privilégio, auditoria e monitorização contínua. Nenhum sistema é 100% seguro, mas trabalhamos para proteger os seus dados. Veja a página de [Segurança](/pt/trust/security).
 
 ## 8) Transferências internacionais
 
