--- a/content/trust/security/br.mdx
+++ b/content/trust/security/br.mdx
@@ -10,7 +10,7 @@ Levamos a segurança a sério. Abaixo está um resumo claro e objetivo de como p
 - Banco de dados preparado para HIPAA (Neon.tech) com BAA assinado
 - Fornecedores com certificações sólidas: Clerk, Stripe, Vercel, Neon (SOC 2 Type II), Stripe (PCI DSS L1)
 - Práticas alinhadas à ISO 27001 em desenvolvimento e operações
-- Detalhes e lista completa de subprocessadores em nosso [Acordo de Processamento de Dados](/pt-BR/legal/dpa)
+- Detalhes e lista completa de subprocessadores em nosso [Acordo de Processamento de Dados](/pt-BR/trust/dpa)
 
 ## 2) Salvaguardas técnicas
 
