--- a/content/trust/security/en.mdx
+++ b/content/trust/security/en.mdx
@@ -10,7 +10,7 @@ We take security seriously. Below is a clear, concise overview of how we protect
 - HIPAA‑ready database (Neon.tech) with BAA executed
 - Vendors with strong certifications: Clerk, Stripe, Vercel, Neon (SOC 2 Type II), Stripe (PCI DSS L1)
 - ISO 27001‑aligned security practices across development and operations
-- Details and full subprocessor list in our [Data Processing Agreement](/legal/dpa)
+- Details and full subprocessor list in our [Data Processing Agreement](/trust/dpa)
 
 ## 2) Technical safeguards
 
