--- a/content/trust/security/pt.mdx
+++ b/content/trust/security/pt.mdx
@@ -10,7 +10,7 @@ Levamos a segurança a sério. Abaixo segue um resumo claro e direto de como pro
 - Base de dados preparada para HIPAA (Neon.tech) com BAA celebrado
 - Fornecedores com certificações sólidas: Clerk, Stripe, Vercel, Neon (SOC 2 Type II), Stripe (PCI DSS L1)
 - Práticas alinhadas com ISO 27001 em desenvolvimento e operações
-- Detalhes e lista completa de subprocessadores no nosso [Acordo de Processamento de Dados](/pt/legal/dpa)
+- Detalhes e lista completa de subprocessadores no nosso [Acordo de Processamento de Dados](/pt/trust/dpa)
 
 ## 2) Salvaguardas técnicas
 
