Update ServerStatus component to use centralized cache duration configuration
- Imported centralized cache duration from betterstackConfig to standardize API call caching.
- Updated documentation comment to reflect the new configuration approach, enhancing clarity and maintainability.
- Adjusted cache duration in betterstackConfig from 60 seconds to 180 seconds for improved performance.

--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -18,10 +18,10 @@ Ejemplo €100: Especialista €85, Tarifa de plataforma €15.
 - Tarjetas (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3) Reglas de Multibanco (cuando paga con 8+ días de antelación)
+## 3) Reglas de Multibanco (cuando paga con 8 días o más de antelación)
 
-- No disponible para citas que ocurren en 8 días o menos
-- Si su cita es en 8+ días, reservamos su horario por 7 días mientras paga
+- No disponible para citas que ocurren en 7 días o menos
+- Si su cita es en 8 días o más, reservamos su horario por 7 días mientras paga
 - Tiene 7 días completos para completar el pago
 - Enviaremos recordatorios en el día 3 y día 6 con instrucciones (cajero, banca en línea, MB WAY)
 
