Update Multibanco payment rules for clarity in multiple language files
- Revised language in the Multibanco rules section to specify payment timelines more clearly, changing "8+ days" to "8 days or more" and "≤8 days" to "7 days or less."
- Ensured consistency across English, Portuguese, and Brazilian Portuguese documentation for improved user understanding.

--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -18,10 +18,10 @@ Exemplo €100: Especialista €85, Taxa de plataforma €15.
 - Cartões (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3) Regras do Multibanco (quando paga com 8+ dias de antecedência)
+## 3) Regras do Multibanco (quando paga com 8 dias ou mais de antecedência)
 
-- Não disponível para consultas que ocorram em ≤8 dias
-- Se a consulta for em 8+ dias, reservamos o horário por 7 dias enquanto paga
+- Não disponível para consultas que ocorram em 7 dias ou menos
+- Se a consulta for em 8 dias ou mais, reservamos o horário por 7 dias enquanto paga
 - Tem 7 dias completos para concluir o pagamento
 - Enviamos lembretes no dia 3 e no dia 6 com instruções (ATM, homebanking, MB WAY)
 
