--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -18,12 +18,12 @@ Example for €100: Expert €85, Platform fee €15.
 - Cards (Visa, Mastercard, Amex)
 - Multibanco (Portugal)
 
-## 3) Multibanco rules (when paying 8+ days in advance)
+## 3) Multibanco rules (when paying 8 or more days in advance)
 
-- Not available for appointments taking place within 8 days
-- When your appointment is 8+ days away, we reserve your slot for 7 days while you pay
+- Not available for appointments taking place in 7 days or less
+- When your appointment is 8 or more days away, we reserve your slot for 7 days while you pay
 - You have 7 full days to complete payment
-- We’ll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
+- We'll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
 
 Late Multibanco payments (after 7 days): If the slot is no longer available or violates expert rules, we automatically refund 90% and retain a 10% processing fee.
 
