Update Multibanco payment policies across multiple languages for clarity and consistency
- Expanded the section on late Multibanco payments to include details on the 10% processing fee and its justification, enhancing user understanding.
- Added a courtesy waiver for first-time late payments, specifying the refund process for subsequent late payments.
- Ensured consistent language and structure across English, Portuguese, Brazilian Portuguese, and Spanish documentation to improve clarity for users.

--- a/content/payment-policies/br.mdx
+++ b/content/payment-policies/br.mdx
@@ -25,11 +25,25 @@ Exemplo €100: Especialista €85, Taxa de plataforma €15.
 - Você tem 7 dias completos para concluir o pagamento
 - Enviaremos lembretes no dia 3 e no dia 6 com instruções (caixa eletrônico, internet banking, MB WAY)
 
-Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do especialista, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento.
+Pagamentos Multibanco tardios (após 7 dias): se o horário não estiver mais disponível ou violar regras do especialista, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento, sujeito à legislação aplicável e às regras das redes de cartões.
+
+### Entendendo a Taxa de Processamento de 10%
+
+A retenção de 10% cobre nossos custos operacionais reais quando pagamentos tardios resultam em reservas perdidas:
+
+- Taxas de processamento de pagamentos (Stripe, Multibanco): 2.5%
+- Operações de plataforma e conformidade: 3%
+- Custos administrativos e de suporte: 2.5%
+- Compensação por horário reservado do especialista: 2%
+
+Esta taxa é comparável aos padrões da indústria (Airbnb retém ~14% em situações similares) e ajuda a manter a sustentabilidade da plataforma.
+
+**Cortesia para o primeiro incidente**: Se este for seu primeiro pagamento Multibanco tardio, dispensamos a taxa e reembolsamos 100%. Pagamentos tardios subsequentes estão sujeitos à retenção de 10%.
 
 ## 4) Reembolsos por conflitos (Multibanco tardio)
 
-- Reembolso automático: 90% devolvido e 10% retido como taxa de processamento
+- **Primeiro pagamento tardio**: 100% de reembolso (dispensa por cortesia)
+- **Pagamentos tardios subsequentes**: 90% de reembolso, 10% retido como taxa de processamento
 - Prazo de reembolso: normalmente 5–10 dias úteis (via Stripe)
 - Notificamos por e‑mail
 
