--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -25,11 +25,25 @@ Ejemplo €100: Especialista €85, Tarifa de plataforma €15.
 - Tiene 7 días completos para completar el pago
 - Enviaremos recordatorios en el día 3 y día 6 con instrucciones (cajero, banca en línea, MB WAY)
 
-Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del especialista, reembolsamos automáticamente el 90% y retenemos un 10% como tarifa de procesamiento.
+Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del especialista, reembolsamos automáticamente el 90% y retenemos un 10% como tarifa de procesamiento, sujeto a la legislación aplicable y a las reglas de las redes de tarjetas.
+
+### Entendiendo la Tarifa de Procesamiento del 10%
+
+La retención del 10% cubre nuestros costos operativos reales cuando los pagos tardíos resultan en reservas perdidas:
+
+- Tarifas de procesamiento de pagos (Stripe, Multibanco): 2.5%
+- Operaciones de plataforma y cumplimiento: 3%
+- Costos administrativos y de soporte: 2.5%
+- Compensación por horario reservado del especialista: 2%
+
+Esta tarifa es comparable a los estándares de la industria (Airbnb retiene ~14% en situaciones similares) y ayuda a mantener la sostenibilidad de la plataforma.
+
+**Cortesía para el primer incidente**: Si este es su primer pago Multibanco tardío, eximimos la tarifa y reembolsamos el 100%. Los pagos tardíos posteriores están sujetos a la retención del 10%.
 
 ## 4) Reembolsos por conflictos (Multibanco tardío)
 
-- Reembolso automático: 90% devuelto y 10% retenido como tarifa de procesamiento
+- **Primer pago tardío**: 100% de reembolso (exención por cortesía)
+- **Pagos tardíos posteriores**: 90% de reembolso, 10% retenido como tarifa de procesamiento
 - Plazo de reembolso: normalmente 5–10 días hábiles (vía Stripe)
 - Le notificaremos por correo electrónico
 
