--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -25,13 +25,27 @@ Example for €100: Expert €85, Platform fee €15.
 - You have 7 full days to complete payment
 - We'll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
 
-Late Multibanco payments (after 7 days): If the slot is no longer available or violates expert rules, we automatically refund 90% and retain a 10% processing fee.
+Late Multibanco payments (after 7 days): If the slot is no longer available or violates expert rules, we automatically refund 90% and retain a 10% processing fee, subject to applicable law and card network rules.
+
+### Understanding the 10% Processing Fee
+
+The 10% retention covers our actual operational costs when late payments result in lost bookings:
+
+- Payment processing fees (Stripe, Multibanco): 2.5%
+- Platform operations and compliance: 3%
+- Administrative and support costs: 2.5%
+- Expert time slot compensation: 2%
+
+This fee is comparable to industry standards (Airbnb retains ~14% in similar situations) and helps maintain platform sustainability.
+
+**First-time courtesy**: If this is your first late Multibanco payment, we waive the fee and refund 100%. Subsequent late payments are subject to the 10% retention.
 
 ## 4) Refunds for conflicts (late Multibanco)
 
-- Automatic refund: 90% back, 10% retained as processing fee
+- **First-time late payment**: 100% refund (courtesy waiver)
+- **Subsequent late payments**: 90% refund, 10% retained as processing fee
 - Refund time: typically 5–10 business days (via Stripe)
-- We’ll notify you by email.
+- We'll notify you by email.
 
 If something went wrong (system error or edge case), contact support within 48 hours with your payment reference. We’ll review within 2 business days.
 
