Implement customer-first 100% refund policy for late Multibanco payments
Updated the payment webhook logic to provide a 100% refund for all late Multibanco payment conflicts (blocked dates, time overlaps, minimum notice), removing the previous 10% processing fee. Updated payment policy documentation in all supported languages to reflect the new customer-first approach. Added new technical documentation and test coverage for the blocked date refund logic.

--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -25,27 +25,31 @@ Example for €100: Expert €85, Platform fee €15.
 - You have 7 full days to complete payment
 - We'll send reminders on day 3 and day 6 with instructions (ATM, online banking, MB WAY)
 
-Late Multibanco payments (after 7 days): If the slot is no longer available or violates expert rules, we automatically refund 90% and retain a 10% processing fee, subject to applicable law and card network rules.
+Late Multibanco payments (after 7 days): **100% refund for any conflict**
 
-### Understanding the 10% Processing Fee
+We've simplified our policy to be more customer-friendly:
 
-The 10% retention covers our actual operational costs when late payments result in lost bookings:
+- **If the expert blocked the date** after your booking: **100% refund**
+- **If the slot was booked by another client**: **100% refund**
+- **If minimum notice requirements are violated**: **100% refund**
 
-- Payment processing fees (Stripe, Multibanco): 2.5%
-- Platform operations and compliance: 3%
-- Administrative and support costs: 2.5%
-- Expert time slot compensation: 2%
+### Our Customer-First Approach
 
-This fee is comparable to industry standards (Airbnb retains ~14% in similar situations) and helps maintain platform sustainability.
+**Why 100% refund for all conflicts?**
 
-**First-time courtesy**: If this is your first late Multibanco payment, we waive the fee and refund 100%. Subsequent late payments are subject to the 10% retention.
+- We believe late payments shouldn't penalize customers when conflicts arise
+- Even if payment was delayed, if the appointment can't proceed, you deserve a full refund
+- Eleva Care absorbs payment processing costs to maintain trust
+- This policy demonstrates our commitment to fair treatment
 
 ## 4) Refunds for conflicts (late Multibanco)
 
-- **First-time late payment**: 100% refund (courtesy waiver)
-- **Subsequent late payments**: 90% refund, 10% retained as processing fee
+- **All conflicts**: 100% full refund (no processing fees)
+  - Expert blocked the date
+  - Slot already booked by another client
+  - Minimum notice requirements not met
 - Refund time: typically 5–10 business days (via Stripe)
-- We'll notify you by email.
+- We'll notify you by email with the specific reason
 
 If something went wrong (system error or edge case), contact support within 48 hours with your payment reference. We’ll review within 2 business days.
 
