--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -25,27 +25,31 @@ Ejemplo €100: Especialista €85, Tarifa de plataforma €15.
 - Tiene 7 días completos para completar el pago
 - Enviaremos recordatorios en el día 3 y día 6 con instrucciones (cajero, banca en línea, MB WAY)
 
-Pagos Multibanco tardíos (después de 7 días): Si el horario ya no está disponible o infringe reglas del especialista, reembolsamos automáticamente el 90% y retenemos un 10% como tarifa de procesamiento, sujeto a la legislación aplicable y a las reglas de las redes de tarjetas.
+Pagos Multibanco tardíos (después de 7 días): **reembolso del 100% para cualquier conflicto**
 
-### Entendiendo la Tarifa de Procesamiento del 10%
+Hemos simplificado nuestra política para ser más favorable al cliente:
 
-La retención del 10% cubre nuestros costos operativos reales cuando los pagos tardíos resultan en reservas perdidas:
+- **Si el especialista bloqueó la fecha** después de su reserva: **reembolso del 100%**
+- **Si el horario fue reservado por otro cliente**: **reembolso del 100%**
+- **Si se violaron los requisitos de aviso mínimo**: **reembolso del 100%**
 
-- Tarifas de procesamiento de pagos (Stripe, Multibanco): 2.5%
-- Operaciones de plataforma y cumplimiento: 3%
-- Costos administrativos y de soporte: 2.5%
-- Compensación por horario reservado del especialista: 2%
+### Nuestro Enfoque Centrado en el Cliente
 
-Esta tarifa es comparable a los estándares de la industria (Airbnb retiene ~14% en situaciones similares) y ayuda a mantener la sostenibilidad de la plataforma.
+**¿Por qué reembolso del 100% para todos los conflictos?**
 
-**Cortesía para el primer incidente**: Si este es su primer pago Multibanco tardío, eximimos la tarifa y reembolsamos el 100%. Los pagos tardíos posteriores están sujetos a la retención del 10%.
+- Creemos que los pagos tardíos no deben penalizar a los clientes cuando surgen conflictos
+- Aunque el pago se retrasó, si la cita no puede proceder, merece un reembolso completo
+- Eleva Care absorbe los costos de procesamiento de pagos para mantener la confianza
+- Esta política demuestra nuestro compromiso con el trato justo
 
 ## 4) Reembolsos por conflictos (Multibanco tardío)
 
-- **Primer pago tardío**: 100% de reembolso (exención por cortesía)
-- **Pagos tardíos posteriores**: 90% de reembolso, 10% retenido como tarifa de procesamiento
+- **Todos los conflictos**: reembolso completo del 100% (sin tarifas de procesamiento)
+  - Especialista bloqueó la fecha
+  - Horario ya reservado por otro cliente
+  - Requisitos de aviso mínimo no cumplidos
 - Plazo de reembolso: normalmente 5–10 días hábiles (vía Stripe)
-- Le notificaremos por correo electrónico
+- Le notificaremos por correo electrónico con el motivo específico
 
 Si hubo un error del sistema o caso especial, contacte con soporte dentro de 48 h con su referencia; revisamos en 2 días hábiles.
 
