--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -25,27 +25,31 @@ Exemplo €100: Especialista €85, Taxa de plataforma €15.
 - Tem 7 dias completos para concluir o pagamento
 - Enviamos lembretes no dia 3 e no dia 6 com instruções (ATM, homebanking, MB WAY)
 
-Pagamentos Multibanco tardios (após 7 dias): se o horário já não estiver disponível ou violar regras do especialista, reembolsamos automaticamente 90% e retemos 10% como taxa de processamento, sujeito à legislação aplicável e às regras das redes de cartões.
+Pagamentos Multibanco tardios (após 7 dias): **reembolso de 100% para qualquer conflito**
 
-### Compreender a Taxa de Processamento de 10%
+Simplificámos a nossa política para ser mais favorável ao cliente:
 
-A retenção de 10% cobre os nossos custos operacionais reais quando pagamentos tardios resultam em reservas perdidas:
+- **Se o especialista bloqueou a data** após a sua reserva: **reembolso de 100%**
+- **Se o horário foi reservado por outro cliente**: **reembolso de 100%**
+- **Se os requisitos de aviso mínimo foram violados**: **reembolso de 100%**
 
-- Taxas de processamento de pagamentos (Stripe, Multibanco): 2.5%
-- Operações de plataforma e conformidade: 3%
-- Custos administrativos e de suporte: 2.5%
-- Compensação por horário reservado do especialista: 2%
+### A Nossa Abordagem Centrada no Cliente
 
-Esta taxa é comparável aos padrões da indústria (Airbnb retém ~14% em situações similares) e ajuda a manter a sustentabilidade da plataforma.
+**Porquê reembolso de 100% para todos os conflitos?**
 
-**Cortesia para o primeiro incidente**: Se este for o seu primeiro pagamento Multibanco tardio, dispensamos a taxa e reembolsamos 100%. Pagamentos tardios subsequentes estão sujeitos à retenção de 10%.
+- Acreditamos que pagamentos tardios não devem penalizar clientes quando surgem conflitos
+- Mesmo que o pagamento tenha sido atrasado, se a consulta não pode prosseguir, merece um reembolso total
+- A Eleva Care absorve os custos de processamento de pagamento para manter a confiança
+- Esta política demonstra o nosso compromisso com tratamento justo
 
 ## 4) Reembolsos por conflitos (Multibanco tardio)
 
-- **Primeiro pagamento tardio**: 100% de reembolso (dispensa por cortesia)
-- **Pagamentos tardios subsequentes**: 90% de reembolso, 10% retido como taxa de processamento
+- **Todos os conflitos**: reembolso total de 100% (sem taxas de processamento)
+  - Especialista bloqueou a data
+  - Horário já reservado por outro cliente
+  - Requisitos de aviso mínimo não cumpridos
 - Prazo de reembolso: normalmente 5–10 dias úteis (via Stripe)
-- Notificamos por e‑mail
+- Notificamos por e‑mail com o motivo específico
 
 Se houve erro do sistema ou caso excecional, contacte o suporte em 48 h com a referência; analisamos em 2 dias úteis.
 
