feat: migrate to native Next.js 16 MDX implementation
🚀 Major improvements:
- Migrate from next-mdx-remote to native @next/mdx imports
- Remove optimizePackageImports (redundant with Turbopack)
- Add export const metadata to all MDX files (48 files across 4 locales)
- Remove MDX metadata from messages/*.json (cleaner separation)

📦 Performance benefits:
- Build-time MDX compilation (faster than runtime)
- Turbopack optimization for MDX files
- Better code splitting and tree-shaking
- Zero runtime file I/O for MDX content
- Smaller bundle size

🔧 Technical changes:
- Remove src/lib/mdx/server-mdx.tsx (no longer needed)
- Remove next-mdx-remote dependency from package.json
- Update all MDX pages to use dynamic imports
- Keep mdx-components.tsx (official Next.js 16 API)
- Verify staleTimes config (correct framework-level setting)
- Fix lint errors (unused variables in calendar-list.ts, vault.ts)

✅ All pages migrated:
- about/page.tsx
- history/page.tsx
- trust/[document]/page.tsx
- legal/[document]/page.tsx
- become-expert/page.tsx

📝 Content updates:
- Add metadata exports to all MDX files in 4 languages (en, es, pt, br)
- trust/security, trust/dpa (8 files)
- legal docs: terms, privacy, cookie, payment-policies, expert-agreement (20 files)
- about, history (8 files)
- become-expert (4 files NEW)

✓ Build passing (exit code 0)
✓ TypeScript clean
✓ ESLint clean
✓ All MDX metadata working correctly

--- a/src/content/about/br.mdx
+++ b/src/content/about/br.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  title: "Sobre a Eleva Care | Nossa Missão, Visão e Equipe",
+  description: "Conheça a missão da Eleva Care de transformar a saúde da mulher através da inovação e compaixão. Conheça nossa equipe de especialistas em saúde dedicados a capacitar mulheres.",
+  og: {
+    title: "Sobre a Eleva Care | Nossa Missão, Visão e Equipe",
+    description: "Conheça a missão da Eleva Care de transformar a saúde da mulher através da inovação e compaixão. Conheça nossa equipe de especialistas.",
+    siteName: "Eleva Care"
+  }
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import Image from 'next/image';
