--- a/src/content/about/en.mdx
+++ b/src/content/about/en.mdx
@@ -1,15 +1,27 @@
+export const metadata = {
+  title: 'About Eleva Care | Our Mission, Vision & Team',
+  description:
+    "Learn about Eleva Care's mission to transform women's healthcare through innovation and compassion. Meet our team of healthcare experts dedicated to empowering women.",
+  og: {
+    title: 'About Eleva Care | Our Mission, Vision & Team',
+    description:
+      "Learn about Eleva Care's mission to transform women's healthcare through innovation and compassion. Meet our team of healthcare experts.",
+    siteName: 'Eleva Care',
+  },
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import Image from 'next/image';
 
-import TextBlock from '@/components/shared/text/TextBlock';
-import HeadlineSection from '@/components/shared/text/HeadlineSection';
 import AdvisorsSection from '@/components/sections/about/AdvisorsSection';
 import BeliefsSection from '@/components/sections/about/BeliefsSection';
 import ClinicalExpertsSection from '@/components/sections/about/ClinicalExpertsSection';
 import JoinNetworkSection from '@/components/sections/about/JoinNetworkSection';
 import MissionSection from '@/components/sections/about/MissionSection';
 import TeamSection from '@/components/sections/about/TeamSection';
+import HeadlineSection from '@/components/shared/text/HeadlineSection';
+import TextBlock from '@/components/shared/text/TextBlock';
 
 <HeadlineSection
   id="transforming-women-healthcare"
