--- a/src/content/about/es.mdx
+++ b/src/content/about/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  title: "Sobre Eleva Care | Nuestra Misión, Visión y Equipo",
+  description: "Conozca la misión de Eleva Care de transformar la salud de la mujer a través de la innovación y la compasión. Conozca a nuestro equipo de expertos en salud dedicados a empoderar a las mujeres.",
+  og: {
+    title: "Sobre Eleva Care | Nuestra Misión, Visión y Equipo",
+    description: "Conozca la misión de Eleva Care de transformar la salud de la mujer a través de la innovación y la compasión. Conozca a nuestro equipo de expertos.",
+    siteName: "Eleva Care"
+  }
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import Image from 'next/image';
