--- a/src/content/expert-agreement/en.mdx
+++ b/src/content/expert-agreement/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Expert Agreement | Eleva Care",
+  "description": "Review Eleva Care's expert agreement outlining the terms and conditions for independent experts using our platform.",
+  "og": {
+    "title": "Expert Agreement | Eleva Care",
+    "description": "Review Eleva Care's expert agreement outlining the terms and conditions for independent experts using our platform.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Expert Service Agreement
 
 _Effective Date: April 16, 2025_
