--- a/src/content/history/es.mdx
+++ b/src/content/history/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  title: "Nuestra Historia | El Viaje Detrás de Eleva Care",
+  description: "Descubre la pasión y el propósito que impulsan la misión de Eleva Care de transformar la atención médica de las mujeres. Una carta de nuestro fundador sobre por qué comenzamos este viaje.",
+  og: {
+    title: "Nuestra Historia | El Viaje Detrás de Eleva Care",
+    description: "Descubre la pasión y el propósito que impulsan la misión de Eleva Care de transformar la atención médica de las mujeres. Una carta de nuestro fundador sobre por qué comenzamos este viaje.",
+    siteName: "Eleva Care"
+  }
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import SmoothLink from '@/components/shared/navigation/SmoothLink';
