--- a/src/content/payment-policies/en.mdx
+++ b/src/content/payment-policies/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Payment Policies | Eleva Care",
+  "description": "Understand Eleva Care's payment terms, refund policies, and billing procedures for healthcare services.",
+  "og": {
+    "title": "Payment Policies | Eleva Care",
+    "description": "Understand Eleva Care's payment terms, refund policies, and billing procedures for healthcare services.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Payment Policies
 
 _Effective Date: June 3, 2025_
