--- a/src/content/payment-policies/es.mdx
+++ b/src/content/payment-policies/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Políticas de Pago | Eleva Care",
+  "description": "Comprenda los términos de pago, políticas de reembolso y procedimientos de facturación de Eleva Care para servicios de salud.",
+  "og": {
+    "title": "Políticas de Pago | Eleva Care",
+    "description": "Comprenda los términos de pago, políticas de reembolso y procedimientos de facturación de Eleva Care para servicios de salud.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Políticas de Pago
 
 _Fecha de vigencia: 3 de junio de 2025_
