--- a/src/content/payment-policies/pt.mdx
+++ b/src/content/payment-policies/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Políticas de Pagamento | Eleva Care",
+  "description": "Compreenda os termos de pagamento, políticas de reembolso e procedimentos de faturação da Eleva Care para serviços de saúde.",
+  "og": {
+    "title": "Políticas de Pagamento | Eleva Care",
+    "description": "Compreenda os termos de pagamento, políticas de reembolso e procedimentos de faturação da Eleva Care para serviços de saúde.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Políticas de Pagamento
 
 _Data de vigência: 3 de junho de 2025_
