--- a/src/content/privacy/br.mdx
+++ b/src/content/privacy/br.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Política de Privacidade | Eleva Care",
+  "description": "Saiba como a Eleva Care protege suas informações de saúde pessoais e seus direitos de privacidade de acordo com os regulamentos de saúde.",
+  "og": {
+    "title": "Política de Privacidade | Eleva Care",
+    "description": "Saiba como a Eleva Care protege suas informações de saúde pessoais e seus direitos de privacidade de acordo com os regulamentos de saúde.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Política de Privacidade
 
 _Data de vigência: 16 de abril de 2025_
