--- a/src/content/privacy/en.mdx
+++ b/src/content/privacy/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Privacy Policy | Eleva Care",
+  "description": "Learn how Eleva Care protects your personal health information and privacy rights in accordance with healthcare regulations.",
+  "og": {
+    "title": "Privacy Policy | Eleva Care",
+    "description": "Learn how Eleva Care protects your personal health information and privacy rights in accordance with healthcare regulations.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Privacy Policy
 
 _Effective Date: April 16, 2025_
