--- a/src/content/terms/en.mdx
+++ b/src/content/terms/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Terms of Service | Eleva Care",
+  "description": "Read Eleva Care's terms of service and understand your rights and obligations when using our healthcare platform.",
+  "og": {
+    "title": "Terms of Service | Eleva Care",
+    "description": "Read Eleva Care's terms of service and understand your rights and obligations when using our healthcare platform.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Terms of Service
 
 _Effective Date:_ April 16, 2025
