--- a/src/content/terms/es.mdx
+++ b/src/content/terms/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Términos de Servicio | Eleva Care",
+  "description": "Lea los términos de servicio de Eleva Care y comprenda sus derechos y obligaciones al utilizar nuestra plataforma de salud.",
+  "og": {
+    "title": "Términos de Servicio | Eleva Care",
+    "description": "Lea los términos de servicio de Eleva Care y comprenda sus derechos y obligaciones al utilizar nuestra plataforma de salud.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Términos del Servicio
 
 _Fecha de vigencia:_ 16 de abril de 2025
