--- a/src/content/terms/pt.mdx
+++ b/src/content/terms/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Termos de Serviço | Eleva Care",
+  "description": "Leia os termos de serviço da Eleva Care e compreenda os seus direitos e obrigações ao utilizar a nossa plataforma de saúde.",
+  "og": {
+    "title": "Termos de Serviço | Eleva Care",
+    "description": "Leia os termos de serviço da Eleva Care e compreenda os seus direitos e obrigações ao utilizar a nossa plataforma de saúde.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Termos de Serviço
 
 _Data de vigência:_ 16 de abril de 2025
