--- a/src/content/trust/security/en.mdx
+++ b/src/content/trust/security/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Security & Compliance | Eleva Care",
+  "description": "Learn about Eleva Care's security measures, certifications, and commitment to protecting your healthcare data with GDPR, LGPD, and HIPAA compliance.",
+  "og": {
+    "title": "Security & Compliance | Eleva Care",
+    "description": "Learn about Eleva Care's security measures, certifications, and commitment to protecting your healthcare data with GDPR, LGPD, and HIPAA compliance.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Security
 
 _Last updated: October 1, 2025_
