--- a/src/content/trust/security/es.mdx
+++ b/src/content/trust/security/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Seguridad y Cumplimiento | Eleva Care",
+  "description": "Conozca las medidas de seguridad, certificaciones y compromiso de Eleva Care para proteger sus datos de salud con cumplimiento de GDPR, LGPD y HIPAA.",
+  "og": {
+    "title": "Seguridad y Cumplimiento | Eleva Care",
+    "description": "Conozca las medidas de seguridad, certificaciones y compromiso de Eleva Care para proteger sus datos de salud con cumplimiento de GDPR, LGPD y HIPAA.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Seguridad
 
 _Última actualización: 1 de octubre de 2025_
