--- a/src/content/trust/security/pt.mdx
+++ b/src/content/trust/security/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Segurança e Conformidade | Eleva Care",
+  "description": "Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger os seus dados de saúde com conformidade GDPR, LGPD e HIPAA.",
+  "og": {
+    "title": "Segurança e Conformidade | Eleva Care",
+    "description": "Saiba mais sobre as medidas de segurança, certificações e compromisso da Eleva Care para proteger os seus dados de saúde com conformidade GDPR, LGPD e HIPAA.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Segurança
 
 _Última atualização: 1 de outubro de 2025_
