--- a/src/content/about/pt.mdx
+++ b/src/content/about/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  title: "Sobre a Eleva Care | A Nossa Missão, Visão e Equipa",
+  description: "Conheça a missão da Eleva Care de transformar a saúde da mulher através da inovação e compaixão. Conheça a nossa equipa de especialistas em saúde dedicados a capacitar as mulheres.",
+  og: {
+    title: "Sobre a Eleva Care | A Nossa Missão, Visão e Equipa",
+    description: "Conheça a missão da Eleva Care de transformar a saúde da mulher através da inovação e compaixão. Conheça a nossa equipa de especialistas.",
+    siteName: "Eleva Care"
+  }
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import Image from 'next/image';
