--- a/src/content/cookie/br.mdx
+++ b/src/content/cookie/br.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Política de Cookies | Eleva Care",
+  "description": "Entenda como a Eleva Care usa cookies para melhorar sua experiência de navegação e proteger sua privacidade.",
+  "og": {
+    "title": "Política de Cookies | Eleva Care",
+    "description": "Entenda como a Eleva Care usa cookies para melhorar sua experiência de navegação e proteger sua privacidade.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Política de Cookies
 
 _Data de vigência: 16 de abril de 2025_
