--- a/src/content/cookie/en.mdx
+++ b/src/content/cookie/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Cookie Policy | Eleva Care",
+  "description": "Understand how Eleva Care uses cookies to enhance your browsing experience and protect your privacy.",
+  "og": {
+    "title": "Cookie Policy | Eleva Care",
+    "description": "Understand how Eleva Care uses cookies to enhance your browsing experience and protect your privacy.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Cookie Policy
 
 _Effective Date: April 16, 2025_
