--- a/src/content/cookie/es.mdx
+++ b/src/content/cookie/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Política de Cookies | Eleva Care",
+  "description": "Comprenda cómo Eleva Care utiliza cookies para mejorar su experiencia de navegación y proteger su privacidad.",
+  "og": {
+    "title": "Política de Cookies | Eleva Care",
+    "description": "Comprenda cómo Eleva Care utiliza cookies para mejorar su experiencia de navegación y proteger su privacidad.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Política de Cookies
 
 _Fecha de vigencia: 16 de abril de 2025_
