--- a/src/content/cookie/pt.mdx
+++ b/src/content/cookie/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Política de Cookies | Eleva Care",
+  "description": "Compreenda como a Eleva Care utiliza cookies para melhorar a sua experiência de navegação e proteger a sua privacidade.",
+  "og": {
+    "title": "Política de Cookies | Eleva Care",
+    "description": "Compreenda como a Eleva Care utiliza cookies para melhorar a sua experiência de navegação e proteger a sua privacidade.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Política de Cookies
 
 _Data de vigência: 16 de abril de 2025_
