--- a/src/content/expert-agreement/es.mdx
+++ b/src/content/expert-agreement/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Acuerdo de Expertos | Eleva Care",
+  "description": "Revise el acuerdo de expertos de Eleva Care que describe los términos y condiciones para expertos independientes que utilizan nuestra plataforma.",
+  "og": {
+    "title": "Acuerdo de Expertos | Eleva Care",
+    "description": "Revise el acuerdo de expertos de Eleva Care que describe los términos y condiciones para expertos independientes que utilizan nuestra plataforma.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Acuerdo de Servicios para Expertos
 
 _Fecha de vigencia: 16 de abril de 2025_
