--- a/src/content/expert-agreement/pt.mdx
+++ b/src/content/expert-agreement/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Acordo de Especialistas | Eleva Care",
+  "description": "Reveja o acordo de especialistas da Eleva Care que descreve os termos e condições para especialistas independentes que utilizam a nossa plataforma.",
+  "og": {
+    "title": "Acordo de Especialistas | Eleva Care",
+    "description": "Reveja o acordo de especialistas da Eleva Care que descreve os termos e condições para especialistas independentes que utilizam a nossa plataforma.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Acordo de Serviços para Especialistas
 
 _Data de vigência: 16 de abril de 2025_
