--- a/src/content/history/en.mdx
+++ b/src/content/history/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  title: "Our Story | The Journey Behind Eleva Care",
+  description: "Discover the passion and purpose that drives Eleva Care's mission to transform women's healthcare. A letter from our founder about why we started this journey.",
+  og: {
+    title: "Our Story | The Journey Behind Eleva Care",
+    description: "Discover the passion and purpose that drives Eleva Care's mission to transform women's healthcare. A letter from our founder about why we started this journey.",
+    siteName: "Eleva Care"
+  }
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import SmoothLink from '@/components/shared/navigation/SmoothLink';
