--- a/src/content/history/pt.mdx
+++ b/src/content/history/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  title: "A Nossa História | A Jornada por Trás da Eleva Care",
+  description: "Descubra a paixão e o propósito que impulsionam a missão da Eleva Care de transformar os cuidados de saúde das mulheres. Uma carta do nosso fundador sobre por que começámos esta jornada.",
+  og: {
+    title: "A Nossa História | A Jornada por Trás da Eleva Care",
+    description: "Descubra a paixão e o propósito que impulsionam a missão da Eleva Care de transformar os cuidados de saúde das mulheres. Uma carta do nosso fundador sobre por que começámos esta jornada.",
+    siteName: "Eleva Care"
+  }
+};
+
 import { Button } from '@/components/ui/button';
 import { Separator } from '@/components/ui/separator';
 import SmoothLink from '@/components/shared/navigation/SmoothLink';
