--- a/src/content/privacy/es.mdx
+++ b/src/content/privacy/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Política de Privacidad | Eleva Care",
+  "description": "Conozca cómo Eleva Care protege su información de salud personal y sus derechos de privacidad de acuerdo con las regulaciones de salud.",
+  "og": {
+    "title": "Política de Privacidad | Eleva Care",
+    "description": "Conozca cómo Eleva Care protege su información de salud personal y sus derechos de privacidad de acuerdo con las regulaciones de salud.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Política de Privacidad
 
 _Fecha de vigencia: 16 de abril de 2025_
