--- a/src/content/trust/dpa/en.mdx
+++ b/src/content/trust/dpa/en.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Data Processing Agreement | Eleva Care",
+  "description": "Review Eleva Care's data processing agreement outlining how we handle and protect your healthcare data.",
+  "og": {
+    "title": "Data Processing Agreement | Eleva Care",
+    "description": "Review Eleva Care's data processing agreement outlining how we handle and protect your healthcare data.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Data Processing Agreement (DPA)
 
 _Effective Date: April 16, 2025_
