--- a/src/content/trust/dpa/es.mdx
+++ b/src/content/trust/dpa/es.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Acuerdo de Procesamiento de Datos | Eleva Care",
+  "description": "Revise el acuerdo de procesamiento de datos de Eleva Care que describe cómo manejamos y protegemos sus datos de salud.",
+  "og": {
+    "title": "Acuerdo de Procesamiento de Datos | Eleva Care",
+    "description": "Revise el acuerdo de procesamiento de datos de Eleva Care que describe cómo manejamos y protegemos sus datos de salud.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Acuerdo de Tratamiento de Datos (DPA)
 
 _Fecha de vigencia: 16 de abril de 2025_
