--- a/src/content/trust/dpa/pt.mdx
+++ b/src/content/trust/dpa/pt.mdx
@@ -1,3 +1,13 @@
+export const metadata = {
+  "title": "Acordo de Processamento de Dados | Eleva Care",
+  "description": "Reveja o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos os seus dados de saúde.",
+  "og": {
+    "title": "Acordo de Processamento de Dados | Eleva Care",
+    "description": "Reveja o acordo de processamento de dados da Eleva Care que descreve como tratamos e protegemos os seus dados de saúde.",
+    "siteName": "Eleva Care"
+  }
+};
+
 # Acordo de Tratamento de Dados (DPA)
 
 _Data de vigência: 16 de abril de 2025_
